update nuget packages

--- a/notebooks/ExportToOnnx.ipynb
+++ b/notebooks/ExportToOnnx.ipynb
@@ -20,21 +20,30 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#r \"nuget:Microsoft.ML,1.5.2\"\r\n",
-    "#r \"nuget:Microsoft.Data.Analysis,0.4.0\"\r\n",
-    "#r \"nuget: XPlot.Plotly, 4.0.3\"\r\n",
-    "#r \"nuget:Microsoft.ML.OnnxTransformer,1.5.2\"\r\n",
-    "#r \"nuget:Microsoft.ML.OnnxConverter,0.17.2\"\r\n"
+    "#r \"nuget:Microsoft.ML,1.6.0\"\r\n",
+    "#r \"nuget:Microsoft.Data.Analysis,0.18.0\"\r\n",
+    "#r \"nuget:XPlot.Plotly, 4.0.3\"\r\n",
+    "#r \"nuget:Microsoft.ML.OnnxTransformer,1.6.0\"\r\n",
+    "#r \"nuget:Microsoft.ML.OnnxConverter,0.18.0\"\r\n"
    ],
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
-       "<div><div></div><div><strong>Installed Packages</strong><ul><li><span>fsharp.core, 4.7.2</span></li><li><span>XPlot.Plotly, 4.0.3</span></li></ul></div><div></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Data.Analysis, 0.18.0</span></li><li><span>Microsoft.ML, 1.6.0</span></li><li><span>Microsoft.ML.OnnxConverter, 0.18.0</span></li><li><span>Microsoft.ML.OnnxTransformer, 1.6.0</span></li><li><span>XPlot.Plotly, 4.0.3</span></li></ul></div></div>"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Loading extensions from `Microsoft.Data.Analysis.Interactive.dll`"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "metadata": {
@@ -128,13 +137,13 @@
    ],
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<table><thead><th><i>index</i></th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td><div class=\"dni-plaintext\">0</div></td><td><div class=\"dni-plaintext\">1.1</div></td><td><div class=\"dni-plaintext\">39343</div></td></tr><tr><td><div class=\"dni-plaintext\">1</div></td><td><div class=\"dni-plaintext\">1.3</div></td><td><div class=\"dni-plaintext\">46205</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td><td><div class=\"dni-plaintext\">1.5</div></td><td><div class=\"dni-plaintext\">37731</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td><td><div class=\"dni-plaintext\">2</div></td><td><div class=\"dni-plaintext\">43525</div></td></tr><tr><td><div class=\"dni-plaintext\">4</div></td><td><div class=\"dni-plaintext\">2.2</div></td><td><div class=\"dni-plaintext\">39891</div></td></tr><tr><td><div class=\"dni-plaintext\">5</div></td><td><div class=\"dni-plaintext\">2.9</div></td><td><div class=\"dni-plaintext\">56642</div></td></tr><tr><td><div class=\"dni-plaintext\">6</div></td><td><div class=\"dni-plaintext\">3</div></td><td><div class=\"dni-plaintext\">60150</div></td></tr><tr><td><div class=\"dni-plaintext\">7</div></td><td><div class=\"dni-plaintext\">3.2</div></td><td><div class=\"dni-plaintext\">54445</div></td></tr><tr><td><div class=\"dni-plaintext\">8</div></td><td><div class=\"dni-plaintext\">3.2</div></td><td><div class=\"dni-plaintext\">64445</div></td></tr><tr><td><div class=\"dni-plaintext\">9</div></td><td><div class=\"dni-plaintext\">3.7</div></td><td><div class=\"dni-plaintext\">57189</div></td></tr><tr><td><div class=\"dni-plaintext\">10</div></td><td><div class=\"dni-plaintext\">3.9</div></td><td><div class=\"dni-plaintext\">63218</div></td></tr><tr><td><div class=\"dni-plaintext\">11</div></td><td><div class=\"dni-plaintext\">4</div></td><td><div class=\"dni-plaintext\">55794</div></td></tr><tr><td><div class=\"dni-plaintext\">12</div></td><td><div class=\"dni-plaintext\">4</div></td><td><div class=\"dni-plaintext\">56957</div></td></tr><tr><td><div class=\"dni-plaintext\">13</div></td><td><div class=\"dni-plaintext\">4.1</div></td><td><div class=\"dni-plaintext\">57081</div></td></tr><tr><td><div class=\"dni-plaintext\">14</div></td><td><div class=\"dni-plaintext\">4.5</div></td><td><div class=\"dni-plaintext\">61111</div></td></tr><tr><td><div class=\"dni-plaintext\">15</div></td><td><div class=\"dni-plaintext\">4.9</div></td><td><div class=\"dni-plaintext\">67938</div></td></tr><tr><td><div class=\"dni-plaintext\">16</div></td><td><div class=\"dni-plaintext\">5.1</div></td><td><div class=\"dni-plaintext\">66029</div></td></tr><tr><td><div class=\"dni-plaintext\">17</div></td><td><div class=\"dni-plaintext\">5.3</div></td><td><div class=\"dni-plaintext\">83088</div></td></tr><tr><td><div class=\"dni-plaintext\">18</div></td><td><div class=\"dni-plaintext\">5.9</div></td><td><div class=\"dni-plaintext\">81363</div></td></tr><tr><td><div class=\"dni-plaintext\">19</div></td><td><div class=\"dni-plaintext\">6</div></td><td><div class=\"dni-plaintext\">93940</div></td></tr></tbody></table>"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "metadata": {
@@ -151,13 +160,13 @@
    ],
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<table><thead><th><i>index</i></th><th>Description</th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td><div class=\"dni-plaintext\">0</div></td><td>Length (excluding null values)</td><td><div class=\"dni-plaintext\">30</div></td><td><div class=\"dni-plaintext\">30</div></td></tr><tr><td><div class=\"dni-plaintext\">1</div></td><td>Max</td><td><div class=\"dni-plaintext\">10.5</div></td><td><div class=\"dni-plaintext\">122391</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td><td>Min</td><td><div class=\"dni-plaintext\">1.1</div></td><td><div class=\"dni-plaintext\">37731</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td><td>Mean</td><td><div class=\"dni-plaintext\">5.3133335</div></td><td><div class=\"dni-plaintext\">76003</div></td></tr></tbody></table>"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "metadata": {
@@ -196,22 +205,22 @@
    ],
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<div class=\"dni-plaintext\">27</div>"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<div class=\"dni-plaintext\">3</div>"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "metadata": {
@@ -334,85 +343,19 @@
    ],
    "outputs": [
     {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*************************************************\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*       Metrics for regression model      \r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*------------------------------------------------\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*       LossFn:        56625073.33\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*       R2 Score:      0.89\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*       Absolute loss: 7453.15\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*       Squared loss:  56625074\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*       RMS loss:      7524.96\r\n"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "*************************************************\r\n"
-      ]
-     },
-     "metadata": {}
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "*************************************************\r\n",
+      "*       Metrics for regression model      \r\n",
+      "*------------------------------------------------\r\n",
+      "*       LossFn:        126566762.67\r\n",
+      "*       R2 Score:      0.84\r\n",
+      "*       Absolute loss: 11153.62\r\n",
+      "*       Squared loss:  126566761.7\r\n",
+      "*       RMS loss:      11250.19\r\n",
+      "*************************************************\r\n"
+     ]
     }
    ],
    "metadata": {
@@ -492,7 +435,7 @@
    "mimetype": "text/x-csharp",
    "name": "C#",
    "pygments_lexer": "csharp",
-   "version": "8.0"
+   "version": "9.0"
   }
  },
  "nbformat": 4,
