--- a/notebooks/onnxinference.ipynb
+++ b/notebooks/onnxinference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "source": [
     "!pip install onnxruntime"
    ],
@@ -11,32 +11,23 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Collecting onnxruntime\n",
-      "  Downloading onnxruntime-1.8.1-cp38-cp38-win_amd64.whl (4.7 MB)\n",
-      "Collecting flatbuffers\n",
-      "  Downloading flatbuffers-2.0-py2.py3-none-any.whl (26 kB)\n",
-      "Requirement already satisfied: numpy>=1.16.6 in c:\\tools\\anaconda3\\lib\\site-packages (from onnxruntime) (1.20.1)\n",
-      "Collecting protobuf\n",
-      "  Downloading protobuf-3.17.3-cp38-cp38-win_amd64.whl (909 kB)\n",
-      "Requirement already satisfied: six>=1.9 in c:\\tools\\anaconda3\\lib\\site-packages (from protobuf->onnxruntime) (1.15.0)\n",
-      "Installing collected packages: protobuf, flatbuffers, onnxruntime\n",
-      "Successfully installed flatbuffers-2.0 onnxruntime-1.8.1 protobuf-3.17.3\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "  WARNING: The script onnxruntime_test.exe is installed in 'C:\\tools\\Anaconda3\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+      "Requirement already satisfied: onnxruntime in c:\\users\\rondagdag\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (1.8.1)\n",
+      "Requirement already satisfied: numpy>=1.16.6 in c:\\users\\rondagdag\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from onnxruntime) (1.21.0)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\rondagdag\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from onnxruntime) (3.17.3)\n",
+      "Requirement already satisfied: flatbuffers in c:\\users\\rondagdag\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from onnxruntime) (2.0)\n",
+      "Requirement already satisfied: six>=1.9 in c:\\users\\rondagdag\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from protobuf->onnxruntime) (1.16.0)\n"
      ]
     }
    ],
-   "metadata": {}
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "source": [
     "import onnxruntime as rt\r\n",
     "import numpy as np"
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "source": [
     "sess = rt.InferenceSession(\"model.onnx\")\r\n"
    ],
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "source": [
     "input_yearsExperience = sess.get_inputs()[0].name\r\n",
     "print(\"input name\", input_yearsExperience)\r\n",
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "source": [
     "input_salary = sess.get_inputs()[1].name\r\n",
     "print(\"input name\", input_salary)\r\n",
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "source": [
     "output_name = sess.get_outputs()[4].name\r\n",
     "print(\"output name\", output_name)\r\n",
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "source": [
     "years = np.array([[2.5]], dtype=np.float32)\r\n",
     "salary = np.array([[0]], dtype=np.float32)\r\n",
@@ -166,11 +157,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[array([[50045.047]], dtype=float32)]"
+       "[array([[48377.12]], dtype=float32)]"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 10
     }
    ],
    "metadata": {
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "source": [
     "res[0][0][0]"
    ],
@@ -190,11 +181,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "50045.047"
+       "48377.12"
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 8
     }
    ],
    "metadata": {
@@ -217,16 +208,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit (windows store)"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "interpreter": {
+   "hash": "f56e04445257e8c03737cd64c0fcaf6c726181bea6d5974db6823b1c6c4ad412"
   }
  },
  "nbformat": 4,
